2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/DesktopApplication.cs,
	  MonoDevelop.Core/PlatformService.cs: Moved PlatformService to
	  MD.Core.Gui. Removed old FileIconService class, which is now implemented
	  in PlatformService.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/ProcessService.cs: Fix warning.
	* MonoDevelop.Core.mdp: Updated.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/SystemAssemblyService.cs: Catch exceptions thrown by
	  ParsePCFile. Fixes bug #346295.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.addin.xml: Bump add-in versions.

2007-12-12  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/SystemAssemblyService.cs: Catch exception when pkg-config
	  can't be executed. Catch top-level unhandled exceptions in background
	  initialisation thread to stop MD dying on Mono 1.2.6.
	* MonoDevelop.Core/LoggingService.cs: Add some newlines to the log messages
	  when an exception is being logged, to improve readability.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/PackageExtensionNode.cs,
	  MonoDevelop.Core.AddIns/ServiceExtensionNode.cs,
	  MonoDevelop.Core.AddIns/ExecutionHandlerCodon.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs,
	  MonoDevelop.Core.FileSystem/DefaultFileSystemExtension.cs,
	  MonoDevelop.Core.addin.xml: API cleanup.

2007-12-07  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core/PlatformService.cs: Add fallback mime-type support
	for ChangeLogs.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core/PlatformService.cs: New service to hand off the
	  platform specific operations to platform-specific addins.  Operations
	  such as Mime, Font, DefaultApplication and Icons (anything that
	  touches Gnome) is abstracted for now.