@@ -1,3 +1,8 @@
+2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Core/Runtime.cs: Get add-ins from a version specific
+	  repository.
+
 2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Makefile.am, MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp,
